# GameNative

./: .gitignore  .gitmodules  README.md  THIRD_PARTY_NOTICES  manifest.json
app/: build.gradle.kts
app/schemas/app.gamenative.db.PluviaDatabase/: 20.json
app/src/main/assets/: wine_debug_channels.json
app/src/main/assets/fexcore/: fexcore-2605.tzst
app/src/main/assets/lsfg_vk/android_arm64_v8a/: VkLayer_LS_frame_generation.json
app/src/main/cpp/steambootstrap/: CMakeLists.txt
app/src/main/java/app/gamenative/: PluviaApp.kt  PrefManager.kt  SteamBootstrap.kt
app/src/main/java/app/gamenative/data/: AppInfo.kt  DepotInfo.kt  DownloadInfo.kt  RecommendationRepository.kt  SaveFilePattern.kt  UserFileInfo.kt
app/src/main/java/app/gamenative/db/: PluviaDatabase.kt
app/src/main/java/app/gamenative/enums/: PathType.kt  SteamRealm.kt
app/src/main/java/app/gamenative/events/: AndroidEvent.kt  SteamEvent.kt
app/src/main/res/values/: arrays.xml  strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
(+90 files in other folders)
